[package]
name = "rfbproxy"
version = "0.1.0"
authors = ["Luis Héctor Chávez <luis@repl.it>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byte-slice-cast = "1.0.0"
bytes = "1.0.1"
clap = "2.33"
env_logger = "*"
futures = "0.3.12"
http = "0.2"
hyper = { version = "0.14.4", features = ["server", "tcp", "http1", "http2"] }
hyper-staticfile = "0.6"
hyper-tungstenite = "0.2"
log = "*"
path-clean = "0.1"
psimple = { package = "libpulse-simple-binding", version = "2.20.1" }
pulse = { package = "libpulse-binding", version = "2.20.0" }
tokio = { version = "1.2", features = ["full"] }
tokio-tungstenite = "0.13.0"
