[package]
name = "rfbproxy"
version = "0.1.1"
authors = ["Luis Héctor Chávez <luis@repl.it>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
byte-slice-cast = "1.0.0"
bytes = "1.0.1"
chrono = "0.4"
cipher = "*"
clap = "2.33"
des = "0.6.0"
env_logger = "*"
futures = "0.3.12"
http = "0.2"
hyper = { version = "0.14.4", features = ["server", "tcp", "http1", "http2"] }
hyper-staticfile = "0.6"
hyper-tungstenite = "0.2"
lame-sys = "0.1.2"
log = "*"
opus = "0.2.1"
paseto = { version = "2.0.2+1.0.3", features = ["v2"] }
path-clean = "0.1"
prost = "0.7"
prost-types = "0.7"
psimple = { package = "libpulse-simple-binding", version = "2.20.1" }
pulse = { package = "libpulse-binding", version = "2.20.0" }
rand = "0.8.2"
ring = "0.16"
serde_json = "1.0.64"
tokio = { version = "1.16", features = ["full"] }
tokio-tungstenite = "0.13.0"

[dev-dependencies]
tempfile = "3"
matroska = "0.5.5"
tokio-test = "0.4.0"

[build-dependencies]
prost-build = { version = "0.7" }
